MSAA accParent of document should not be null.

Bug: 773208
Change-Id: I7c3ffd3968f7c48bdf6b94bf08dcdf849f4c763f