content/browser/accessibility/accessibility_tree_formatter_win.cc
@@ -335,6 +335,7 @@ void AccessibilityTreeFormatterWin::RecursiveBuildAccessibilityTree(
 
 const char* const ALL_ATTRIBUTES[] = {
     "name",
+    "parent",
     "value",
     "states",
     "attributes",
@@ -404,6 +405,7 @@ void AccessibilityTreeFormatterWin::AddMSAAProperties(
   LONG ia_role = 0;
   if (SUCCEEDED(node->get_accRole(variant_self, ia_role_variant.Receive()))) {
     dict->SetString("role", RoleVariantToString(ia_role_variant));
+    ia_role = V_I4(ia_role_variant.ptr());
   }
 
   // If S_FALSE it means there is no name
@@ -415,6 +417,25 @@ void AccessibilityTreeFormatterWin::AddMSAAProperties(
       dict->SetString("name", name);
   }
   temp_bstr.Reset();
+
+  Microsoft::WRL::ComPtr<IDispatch> parent_dispatch;
+  if (SUCCEEDED(node->get_accParent(parent_dispatch.GetAddressOf()))) {
+    Microsoft::WRL::ComPtr<IAccessible> parent_accessible;
+    if (!parent_dispatch) {
+      dict->SetString("parent", "[null]");
+    } else if (SUCCEEDED(parent_dispatch.As(&parent_accessible))) {
+      base::win::ScopedVariant parent_ia_role_variant;
+      if (SUCCEEDED(parent_accessible->get_accRole(
+              variant_self, parent_ia_role_variant.Receive())))
+        dict->SetString("parent", RoleVariantToString(parent_ia_role_variant));
+      else
+        dict->SetString("parent", L"[Error retrieving role from parent]");
+    } else {
+      dict->SetString("parent", L"[Error getting IAccessible* for parent]");
+    }
+  } else {
+    dict->SetString("parent", L"[Error retrieving parent]");
+  }
 
   if (SUCCEEDED(node->get_accValue(variant_self, temp_bstr.Receive())))
     dict->SetString("value", base::string16(temp_bstr, temp_bstr.Length()));
